<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWelcomeBackground">


    <ImageView
        android:id="@+id/image_back_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/activity_man" />



    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="top"
        android:text="@string/physical_activity"
        android:textAlignment="center"
        android:textAppearance="@style/WelcomeHeadText" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dp"/>


    <Button
        android:id="@+id/btnNext"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_above="@+id/btnBack"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/welcome_button"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorWelcomeBackground"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/back"
        android:textAlignment="center"
        android:textAppearance="@style/WelcomeHeadTextLess"  />


</RelativeLayout>