<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWelcomeBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome1_full" />


        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="top"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAppearance="@style/WelcomeHeadText" />

        <TextView
            android:id="@+id/info"
            android:layout_width="429dp"
            android:layout_height="108dp"
            android:layout_below="@+id/hello"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|top"
            android:text="@string/welcome_info"
            android:textAlignment="center"
            android:textAppearance="@style/WelcomeText" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="250dp"
            android:layout_height="57dp"
            android:layout_below="@+id/info"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/welcome_button"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/colorWelcomeBackground"
            android:textSize="21sp" />
    </RelativeLayout>

</FrameLayout>