<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/congrats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_like"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/you_achieved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/congrats"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/if_you_like"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/start_image"
                android:layout_width="353dp"
                android:layout_height="59dp"
                android:layout_below="@+id/you_achieved"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/stars" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/btnLater"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_later"
        android:text="@string/later"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>