<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWelcomeBackground">


    <ImageView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_3m"
        android:visibility="visible" />

    <TextView
        android:id="@+id/your_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="top"
        android:text="@string/your_weight"
        android:textAlignment="center"
        android:textAppearance="@style/WelcomeHeadText" />

    <com.wx.wheelview.widget.WheelView
        android:id="@+id/weightWheel"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/your_weight"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="90dp" />


    <com.wx.wheelview.widget.WheelView
        android:id="@+id/metricsWheel"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/your_weight"
        android:layout_alignStart="@+id/weightWheel"
        android:layout_marginStart="80dp"
        android:layout_marginTop="55dp" />


    <Button
        android:id="@+id/btnNext"
        android:layout_width="250dp"
        android:layout_height="57dp"
        android:layout_above="@+id/btnBack"
        android:layout_marginBottom="10dp"
        android:background="@drawable/welcome_button"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorWelcomeBackground"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/back"
        android:textAlignment="center"
        android:textAppearance="@style/WelcomeHeadTextLess"  />


</RelativeLayout>