<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:padding="20dp"
    android:background="@color/colorTransparentDark">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorText"
        android:layout_marginBottom="50dp"
        app:cardCornerRadius="20dp"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/congrats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/its_time"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/you_achieved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/congrats"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/dont_forget"
                android:textAlignment="center"
                android:textColor="@color/colorTextDark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/water_image"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_below="@+id/you_achieved"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/drink_water" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/btnOpen"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_white"
        android:text="@string/drink_water"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

</RelativeLayout>